# mge

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: MGEConfig.cmake.in
docs/: configuration.md  goals.md  resources.md  scene.md  subsystems.md
docs/graphics/: material.md  rendering.md  shader.md  shader.md.txt
example-data/: sample_text.txt  text_resource.mri
include/mge/: config.h  game.h  log.h
include/mge/graphics/: manager.h  material.h  mesh_renderable.h
include/mge/resource/: manager.h  shader.h  text.h
include/mge/scene/: component.h  manager.h  node.h
src/examples/: graphics_manager_example.c  log_example.c  scene_example.c  text_resource_example.c
src/mge/: config.c  entry.c  log.c
src/mge/graphics/: manager.c
src/mge/resource/: manager.c  shader.c  text.c
src/mge/scene/: manager.c  node.c
